# FourSight2.0

./: .gitignore  Copy_of_Overview_of_Colaboratory_Features.ipynb  Copy_of_Phoenix_GPU_Cryptographic_Scanner2.ipynb  README.md  SECURITY.md  akashic_audit.db  app.js  index.html  main.py  pyproject.toml  requirements.txt  styles.css  sync-policy.yml  warden_daemon.py  warden_system.py
apps/: anchor_app.py  scan_app.py
eae/: __init__.py  config.py  dashboard.py  tracker.py  vault.py  warden.py
foursight_warden.egg-info/: PKG-INFO  SOURCES.txt
gpam/: __init__.py  adobe_packer.py  cli.py  memory_block.py  memory_block_builder.py  notebooklm_batch_runner.py  verification_engine.py  verified_memory_gate.py
logs/: gpam_sync_events.jsonl
phoenix_scanner/: __init__.py  anchoring.py  checkpoint.py  cli.py  config.py  crawler.py  keys.py  ledger.py  middleware.py  patterns.py  pii_filter.py  pipeline.py  registry.py  scanner.py  watcher.py
scripts/: gpam_ledger.ts  notebooklm_ingest.ts  package.json  tsconfig.json
tests/: test_adobe_packer.py  test_anchoring.py  test_checkpoint.py  test_config.py  test_crawler.py  test_hashing_stability.py  test_keys.py  test_ledger.py  test_memory_block_builder.py  test_middleware.py  test_notebooklm_batch_runner.py  test_notion_schema.py  test_patterns.py  test_pipeline.py  test_registry.py  test_scanner.py  test_sync_ledger.py  test_sync_policy.py  test_tracker.py  test_vault.py  test_verification_engine.py  test_vl_closure_engine.py  test_vl_commitment_gate.py  test_vl_evidence_store.py  test_vl_pipeline.py  test_vl_types.py  (+3 more)
(+23 files in other folders)
